--- a/api2.html
+++ b/api2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,13 +7,84 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
-        <label for="name">Name:</label>
-        <input id='input' placeholder="President Name" type="text">
-        <button onclick="loadPresidents()" type="button">Search for Presidents</button>
-        <button type="button">Clear</button>
-        <div id="presidentialTable"></div>
-    </form>
-    <script src="api2.js"></script>
+    <input value="Fetch" type="button" id="fetchUserDataBtn" >
+    // Name select
+<select id="cuisineSelect">
+  <option value="">All</option>
+  <option value="Alex">Burgers</option>
+  <option value="Bob">Bob</option>
+  <option value="Carl">Carl</option>
+  <option value="Dave">Dave</option>
+  <option value="Jeffry">Jeffry</option>
+</select>
+// TG select
+<select id="tgSelect">
+  <option value="">All</option>
+  <option value="REV001">REV001</option>
+  <option value="REV002">REV002</option>
+  <option value="REV003">REV003</option>
+  <option value="REV005">REV005</option>
+</select>
+// ENG select
+<select id="engSelect">
+  <option value="">All</option>
+  <option value="IP">IP</option>
+  <option value="CAD">CAD</option>
+  <option value="OPP">OPP</option>
+</select>
+<br/>
+<button id="filterBtn" type="button">Filter</button>
+
+<div id="result"></div>
+
+<script>
+
+
+const searchElement = document.getElementById('fetchUserDataBtn').addEventListener('click', fetchUserData);
+const optionElement = document.getElementById('cuisineSelect')
+const inputElement = document.getElementById('areaCode')
+const filterElement = document.getElementById('filterBtn')
+const result = document.getElementById('result')
+
+
+function fetchUserData() {
+    fetch('api.json')
+        .then(response => response.json())
+        .then(obj => {
+            console.log(obj);
+            //document.getElementById("result").innerHTML += JSON.stringify(json)}
+            return obj;
+        })
+        .then(obj => render(obj));
+}
+
+function render(obj) {
+    obj.data.forEach(element => {
+        //console.log(element.restaurant_name)
+        result.innerHTML += `<h2>${element.restaurant_name}</h2>`
+        result.innerHTML += `<h4>${element.cuisines}</h4>`
+        result.innerHTML += `<h4>${element.restaurant_phone}</h4>`
+        
+    })
+
+}
+
+function filterBtn(data) {
+  var cuisineSelect = document.getElementById("cuisineSelect");
+  cuisineSelect = cuisineSelect.options[cuisineSelect.selectedIndex].value;
+  var tgSelect = document.getElementById("tgSelect");
+  tgSelect = tgSelect.options[tgSelect.selectedIndex].value;
+  var engSelect = document.getElementById("engSelect");
+  engSelect = engSelect.options[engSelect.selectedIndex].value;
+  var filteredData = data.filter((e) => { 
+    return (!cuisineSelect || e.name === cuisineSelect);
+  })
+ .then(cuisineSelect => render(cuisineSelect))
+};
+
+
+
+</script>
 </body>
 </html>
+-->
